--- a/package.json
+++ b/package.json
@@ -3,11 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
-  "bin": {
-    "react-proyect-config-cli": "dist/index.js"
-  },
   "scripts": {
-    "start": "ts-node dist/index.js",
+    "start": "node dist/index.js",
     "build": "npm run clean && tsc",
     "clean": "rimraf dist",
     "dev": "ts-node src/index.ts"
@@ -23,25 +20,41 @@
   },
   "homepage": "https://github.com/eduardogz94/react-proyect-config-cli#readme",
   "dependencies": {
+    "@types/copy-webpack-plugin": "^6.4.0",
+    "@types/mini-css-extract-plugin": "^1.2.2",
+    "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "camelcase": "^6.1.0",
     "chalk": "^4.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "cli-table": "^0.3.4",
     "commander": "^7.0.0",
+    "copy": "^0.3.2",
+    "copy-webpack-plugin": "^7.0.0",
     "diff": "^5.0.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^7.18.0",
     "esm": "^3.2.25",
     "file-loader": "6.1.1",
+    "fs": "0.0.1-security",
     "fs-extra": "^9.1.0",
     "glob": "^7.1.6",
+    "html-webpack-plugin": "^5.1.0",
+    "inversify": "^5.0.5",
+    "mini-css-extract-plugin": "^1.3.7",
     "module-alias": "^2.2.2",
     "path": "^0.12.7",
     "prompts": "2.4.0",
+    "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "semver": "7.3.2"
+    "semver": "7.3.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.22.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3",
+    "webpack-notifier": "^1.13.0"
   },
   "devDependencies": {
     "@types/eslint": "^7.2.6",
