--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "@types/copy-webpack-plugin": "^6.4.0",
     "@types/mini-css-extract-plugin": "^1.2.2",
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
     "camelcase": "^6.1.0",
     "chalk": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -35,7 +33,6 @@
     "diff": "^5.0.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^7.18.0",
     "esm": "^3.2.25",
     "file-loader": "6.1.1",
     "fs": "0.0.1-security",
@@ -60,9 +57,25 @@
     "@types/eslint": "^7.2.6",
     "@types/glob": "^7.1.3",
     "@types/node": "^14.14.22",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.21.0",
+    "eslint-plugin-flowtype": "^5.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "husky": "^5.1.2",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "ts-node": "^9.1.1",
     "tslint": "^5.12.1",
-    "typescript": "^4.1.3",
+    "typescript": "^4.1.5",
     "typescript-module-alias": "^1.0.2"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
   }
 }
