--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,13 @@
     "target": "ES2018",
     "module": "commonjs",
     "lib": ["ES2015", "ES2016", "dom", "dom.iterable", "es2015.iterable"],
-    "sourceMap": false,
+    "sourceMap": true,
     "outDir": "./dist",
     "strict": true,
     "strictPropertyInitialization": false,
     "moduleResolution": "node",
-    "baseUrl": "src",
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "jsx": "react"
-  }
+  },
 }
