--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-flowtype": "^5.3.1",
     "eslint-plugin-react": "^7.22.0",
     "husky": "^5.1.2",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "ts-node": "^9.1.1",
