--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node dist/index.js",
     "build": "npm run clean && tsc",
     "clean": "rimraf dist",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "npx eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "repository": {
     "type": "git",
@@ -73,10 +75,14 @@
     "typescript-module-alias": "^1.0.2"
   },
   "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "prettier --write",
+    "src/**/*.{js,jsx, ts, tsx}": [
+      "eslint . --fix",
       "git add"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
