--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,12 @@
     "sourceMap": true,
     "outDir": "./dist",
     "strict": true,
+    "baseUrl": "./src",
     "strictPropertyInitialization": false,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
   },
+  "exclude": ["node_modules"]
 }
